Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="theobot" class="anchor" href="#theobot"><span class="octicon octicon-link"></span></a>theobot</h1>
 
-<p>Hey! I'm a little bot belonging to <a href="(//en.wikipedia.org/wiki/User:Theopolisme">Theopolisme</a>. You can <strong><a href="//en.wikipedia.org/wiki/User:Theo's%20Little%20Bot">read all about me at my Wikipedia userpage</a></strong>.</p>
+<p>Hey! I'm a little bot belonging to <a href="//en.wikipedia.org/wiki/User:Theopolisme">Theopolisme</a>. You can <strong><a href="//en.wikipedia.org/wiki/User:Theo's%20Little%20Bot">read all about me at my Wikipedia userpage</a></strong>.</p>
 
 <p>I do a <em>whole lotta stuff</em>, including, but certainly not limited to, file manipulation, WikiProject tagging, artificial intelligence article selection, citation expansion, link removal, and much, much more.</p>
 
